# kael.bak2

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  svelte.config.js  vite.config.ts
backend/: dev.sh  requirements.txt
backend/open_webui/: __init__.py  config.py  constants.py  env.py  main.py  middlewares.py  tasks.py  urls.py
backend/open_webui/config/: app.py  config.py
backend/open_webui/jms/: __init__.py  account.py  base.py  chat.py  check_user.py  command.py  poll.py  schemas.py  token.py
backend/open_webui/jms/data/replay/: 02133730-12f1-47ab-9354-41dc5fedae7f.cast  b5155fc4-97c3-4d73-af49-416af654e495.cast  (+1 more)
backend/open_webui/jms/replay/: __init__.py
backend/open_webui/jms/session/: handler.py  manager.py
backend/open_webui/models/: auths.py  chats.py  users.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/retrieval/web/: searxng.py
backend/open_webui/routers/: audio.py  auths.py  channels.py  chats.py  files.py  folders.py  functions.py  groups.py  images.py  knowledge.py  openai.py  pipelines.py  prompts.py  retrieval.py  tasks.py  users.py  utils.py
backend/open_webui/socket/: main.py
backend/open_webui/static/: site.webmanifest
backend/open_webui/storage/: provider.py
backend/open_webui/utils/: access_control.py  auth.py  chat.py  middleware.py  models.py  response.py  task.py
backend/open_webui/views/: audio.py  auths.py  channels.py  chats.py  common.py  configs.py  evaluations.py  files.py  folders.py  functions.py  groups.py  images.py  knowledge.py  memories.py  models.py  ollama.py  pipelines.py  prompts.py  retrieval.py  tasks.py  tools.py  users.py
src/: app.html
src/lib/: constants.ts
src/lib/apis/auths/: index.ts
src/lib/apis/chats/: index.ts
src/lib/apis/tools/: index.ts
src/lib/apis/users/: index.ts
src/lib/components/: NotificationToast.svelte  OnBoarding.svelte
src/lib/components/admin/: Functions.svelte  Users.svelte
src/lib/components/app/: AppSidebar.svelte
src/lib/components/channel/: Channel.svelte  MessageInput.svelte  Navbar.svelte  Thread.svelte
src/lib/components/chat/: Chat.svelte  MessageInput.svelte  ModelSelector.svelte  Navbar.svelte  Placeholder.svelte  SettingsModal.svelte  Tags.svelte
src/lib/components/common/: Folder.svelte
src/lib/components/icons/: ChartBar.svelte  PencilSquare.svelte  SparklesSolid.svelte  ToggleBar.svelte
src/lib/components/layout/: Navbar.svelte  Sidebar.svelte
src/lib/components/playground/: Chat.svelte  Completions.svelte
src/lib/components/workspace/: Knowledge.svelte  Models.svelte  Prompts.svelte  Tools.svelte
src/lib/net/: apiFetch.ts
src/lib/pyodide/: pyodideKernel.worker.ts
src/lib/utils/: index.ts
src/lib/workers/: pyodide.worker.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte
src/routes/(app)/admin/: +layout.svelte
src/routes/(app)/admin.bak/: +layout.svelte
src/routes/(app)/workspace/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/error/: +page.svelte
src/routes/s/[id]/: +page.svelte
src/routes/watch/: +page.svelte
static/: opensearch.xml
static/pyodide/: pyodide-lock.json
(+41 files in other folders)
