[project]
name = "chatai"
description = "ChatAI - The open and powerful AI platform"
authors = [{ name = "ibuler", email = "ibuler@qq.com" }]
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
dependencies = [
    "fastapi==0.115.7",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "python-multipart==0.0.20",
    "python-socketio==5.13.0",
    "python-jose==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "requests==2.32.3",
    "aiohttp==3.11.11",
    "aiocache",
    "aiofiles",
    "sqlalchemy==2.0.38",
    "alembic==1.14.0",
    "peewee==3.17.9",
    "peewee-migrate==1.12.2",
    "psycopg2-binary==2.9.9",
    "pgvector==0.4.0",
    "PyMySQL==1.1.1",
    "bcrypt==4.3.0",
    "redis",
    "boto3==1.35.53",
    "argon2-cffi==23.1.0",
    "loguru==0.7.2",
    "asgiref==3.8.1",
    "openai",
    "anthropic",
    "tiktoken",
    "langchain==0.3.19",
    "langchain-community==0.3.18",
    "opensearch-py==2.8.0",
    "playwright==1.49.1",
    "elasticsearch==8.17.1",
    "transformers",
    "sentence-transformers==3.3.1",
    "accelerate",
    "colbert-ai==0.2.21",
    "einops==0.8.1",
    "ftfy==6.2.3",
    "pypdf==4.3.1",
    "fpdf2==2.8.2",
    "pymdown-extensions==10.14.2",
    "docx2txt==0.8",
    "python-pptx==1.0.0",
    "unstructured==0.16.17",
    "nltk==3.9.1",
    "Markdown==3.7",
    "openpyxl==3.1.5",
    "pyxlsb==1.0.10",
    "xlrd==2.0.1",
    "validators==0.34.0",
    "psutil",
    "sentencepiece",
    "soundfile==0.13.1",
    "azure-ai-documentintelligence==1.0.0",
    "pillow==11.1.0",
    "opencv-python-headless==4.11.0.86",
    "rapidocr-onnxruntime==1.3.24",
    "rank-bm25==0.2.2",
    "onnxruntime==1.20.1",
    "faster-whisper==1.1.1",
    "PyJWT[crypto]==2.10.1",
    "black==25.1.0",
    "extract_msg",
    "pydub",
    "duckduckgo-search~=8.0.0",
    "firecrawl-py==1.12.0",
    "moto[s3]>=5.0.26",
    "protobuf==6.31.1",
    "websocket-client>=1.8.0",
    "grpcio==1.74.0",
]
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia",
]

[project.scripts]
open-webui = "open_webui:app"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build.hooks.custom]  # keep this for reading hooks from `hatch_build.py`

[tool.hatch.build.targets.wheel]
sources = ["backend"]
exclude = [
    ".dockerignore",
    ".gitignore",
    ".webui_secret_key",
    "dev.sh",
    "requirements.txt",
    "start.sh",
    "start_windows.bat",
    "webui.db",
    "chroma.sqlite3",
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,package-lock.json,i18n,*.lock,*.css,*-bundle.js,locales,example-doc.txt,emoji-shortcodes.json'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans'
